# GameEngine

./: CMakeLists.txt  GenerateLibs.sh  clean.sh  run.sh
Engine/res/Shaders/: basic.glsl  default.frag  default.geom  default.glsl  default.vert  default_shader.glsl  defaultb.frag  newshader.glsl  normals.geom
Engine/src/Core/: Base.h  ErrorDetection.h  Layer.h  LayerStack.h  Log.cpp  Log.h  PlattformDetection.h  Window.cpp  Window.h
Engine/src/Core/ImGuiLayer/: ImguiLayer.cpp  ImguiLayer.h
Engine/src/Editor/: EditorLayer.cpp  EditorLayer.h
Engine/src/ImGuiLayer/: ImgGuiSRC.h  ImguiLayer.cpp  ImguiLayer.h
Engine/src/Plattform/Linux/: LinuxWindow.cpp  LinuxWindow.h
Engine/src/Plattform/OpenGL/: GLAPI.h  GLShader.cpp  GLShader.h  OpenGLCamera.cpp  OpenGLCamera.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLEBO.cpp  OpenGLEBO.h  OpenGLFBO.cpp  OpenGLFBO.h  OpenGLMesh.cpp  OpenGLMesh.h  OpenGLModel.cpp  OpenGLModel.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVAO.cpp  OpenGLVAO.h  OpenGLVBO.cpp  OpenGLVBO.h
Engine/src/Plattform/OpenGL/BAK/: GLShaderBAKUP.cpp  OpenGLMeshBAKUP.h  OpenGLModelBAKUP.cpp  OpenGLModelBAKUP.h
Engine/src/Renderer/: Camera.cpp  Camera.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.cpp  GraphicsContext.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderAPI.cpp  RenderAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Engine/src/VectorVertex/: Application.cpp  Application.h  Core.h  Renderer.h  VectorVertex.h  default.vert
Libs/: VectorVertex.h
Projects/Sandbox/: Sandbox.cpp
